# OpenSteamTool

./: README.md  build.bat
.github/workflows/: main.yml
src/: ByteSearch.cpp  ByteSearch.h  CMakeLists.txt  HookManager.cpp  HookManager.h  LuaConfig.cpp  dllmain.cpp  dllmain.h
src/Hook/: HookManager.cpp  Hooks_AppTicket.cpp  Hooks_AppTicket.h  Hooks_Decryption.cpp  Hooks_KeyValues.cpp  Hooks_KeyValues.h  Hooks_Manifest.cpp  Hooks_Misc.cpp  Patterns.h
src/Steam/: Enums.h  Structs.h  Types.h
src/Utils/: AppTicket.cpp  AppTicket.h  Log.cpp  Log.h  LuaConfig.cpp  LuaConfig.h
src/cmake/: FetchCache.cmake
src/dwmapi/: dwmapi.cpp
